aks-microservices/aks-microservices/k8s-objects/aks-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aks-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: aks-cluster-service
          servicePort: 80
        path: /service1
        pathType: Prefix
